<resources>
    <string name="app_name">StayFocused</string>
    <string name="action_settings">Settings</string>
    <string name="startButton">Start</string>
    <string name="giveUpButton">Give up</string>
    <string name="backToWorkButton">Back to work</string>
    <string name="hourDisplay">Hours</string>
    <string name="minuteDisplay">Mins</string>
    <string name="secondDisplay">Seconds</string>

</resources>
